# velarium

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  modelspec_ir.md  pyproject.toml
.github/ISSUE_TEMPLATE/: cli_failure.md
.github/workflows/: benchmark.yml  ci-reusable.yml  ci.yml  publish.yml
docs/: README.md  RELEASING.md  ROADMAP.md  api-reference.md  changelog.md  design.md  interchange-ir-json.md  migration-ir.md  model-sources.md  modelspec-ir.md  performance.md  releasing.md  requirements.txt  security.md  stability.md  stub-compatibility.md  supported-annotations.md  troubleshooting-cli.md  tutorial-stubs.md  valarium.md
docs/guides/: README.md  getting-started.md  package-stubs.md  velarium-library.md  velotype-cli.md
examples/: README.md  getting_started.py
scripts/: benchmark_velotype_batch.py  profile_velotype_batch.py
stubber/: __init__.py  annotations.py  cli.py  ir.py  json_codec.py  modelspec_build.py  normalize.py  stubgen.py
tests/: pythonpath_helpers.py  td_fixtures.py  test_annotations_coverage.py  test_batch.py  test_batch_cache.py  test_batch_subprocess.py  test_cli.py  test_cli_support.py  test_cli_typer.py  test_dataclass.py  test_examples_run.py  test_invariants.py  test_ir.py  test_ir_golden.py  test_ir_integration.py  test_json_codec.py  test_json_limits.py  test_model_metadata.py  test_modelspec_attrs.py  test_modelspec_coverage.py  test_modelspec_pydantic.py  test_normalize_complete.py  test_normalize_dispatch.py  test_property_json_codec.py  test_stubgen_corpus.py  test_stubgen_coverage.py  test_typing_resolve.py  test_version.py
tests/fixtures/batch_mix/: __init__.py
tests/fixtures/batch_pkg/: __init__.py  models.py
tests/fixtures/batch_pkg/tests/: __init__.py  test_excluded.py
tests/fixtures/empty_pkg/: __init__.py
tests/fixtures/ir_golden/: complex_model.json  minimal_model.json
tests/fixtures/sample_pkg/: __init__.py
tests/fixtures/stub_corpus/: mixed_kinds.json  mixed_kinds.pyi  pyrightconfig.json  simple_int.json  simple_int.pyi  with_datetime.json  with_datetime.pyi
