[project]
name = "velarium-workspace"
version = "0.0.0"
description = "Velarium monorepo (workspace root; not published to PyPI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "velarium",
  "stubber",
]

[dependency-groups]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "ty>=0.0.29",
  "build>=1",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
velarium = { workspace = true }
stubber = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=stubber", "--cov=velarium", "--cov-report=term-missing", "--cov-fail-under=100"]

[tool.coverage.run]
branch = false
source = ["packages/stubber/stubber", "packages/velarium/velarium"]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = [
  "packages/velarium/velarium/**/*.py",
  "packages/stubber/stubber/**/*.py",
  "packages/viperis/viperis/**/*.py",
  "packages/morphra/morphra/**/*.py",
  "packages/granitus/granitus/**/*.py",
  "packages/clarion/clarion/**/*.py",
]
