[project]
name = "velarium-workspace"
version = "0.0.0"
description = "Velarium monorepo (workspace root; not published to PyPI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "velarium",
  "velotype",
]

[dependency-groups]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.15",
  "ty>=0.0.29",
  "build>=1",
  "twine>=6",
  "pydantic>=2.4.0",
  "attrs>=23.1.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
velarium = { workspace = true }
velotype = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=velotype", "--cov=velarium", "--cov-report=term-missing", "--cov-fail-under=100"]

[tool.coverage.run]
branch = false
source = ["packages/velotype/velotype", "packages/velarium/velarium"]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.analysis]
# Optional velarium extras may be absent from some environments; imports are runtime-guarded
allowed-unresolved-imports = ["pydantic.**", "pydantic_core.**", "attrs.**"]

[tool.ty.src]
include = [
  "packages/velarium/velarium/**/*.py",
  "packages/velotype/velotype/**/*.py",
  "packages/viperis/viperis/**/*.py",
  "packages/morphra/morphra/**/*.py",
  "packages/granitus/granitus/**/*.py",
  "packages/velocus/velocus/**/*.py",
]
